# miripvir25

./: .gitignore  LICENCE.md  README.md  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg
analysis/: README.md  analysis-00.detection-statistics-bacteria.ipynb  analysis-00.detection-statistics-virus.ipynb  analysis-00.detection-statistics.ipynb  analysis-01.cooccurrence-library.ipynb  analysis-01.cooccurrence.ipynb  analysis-01.coocurrence.ipynb  analysis-01.diversity.ipynb  analysis-01.wide-taxonomic-profiling.ipynb  analysis-02.cooccurrence-by-host.ipynb  analysis-02.coocurrence-habitat.ipynb  analysis-02.host-range.ipynb  analysis-02.organism-range.ipynb  analysis-03.network-properties.ipynb  analysis-04.modules.ipynb  analysis-05.Q&A.ipynb  analysis-05.QA.ipynb  compute.cooccurrence-by-randomization.ipynb  compute.cooccurrence-network-properties.R  compute.coocurrence.R  compute.diversity-correlations.R  conf.yaml  prep-00.benchmark.ipynb  prep-00.metadata.ipynb  prep-00.motus.ipynb  prep-00.virus.ipynb  prep-01.cooccurrence.ipynb  prep-01.tablePABs.ipynb  prep-01.tableS1.ipynb  prep-01.tableS2.ipynb  prep-01.tableS3.ipynb  prep-01.tableSites.ipynb  prep-02.post-cooccurrence.ipynb  prep-03.tableDivBySite.ipynb  prep-03.tableS3.ipynb  prep-03.tableS5.ipynb  prep-04.tableDivByHabitat.ipynb  prep-04.tableS2.ipynb  prep-04.tableS4.ipynb  run.sh  (+4 more)
data/: Contents.md
docs/: analysis.md  benchmark.md  filter.md  index.md  metrics.md  preparation.md
draft-00/: 000.simulations.ipynb  001.data-processing.ipynb  002.detection-statistics.ipynb  003.alpha-diversity.ipynb  004.beta-diversity.ipynb  005.network-properties.ipynb  006.markov-random-field.ipynb  007.network-properties.virus-bacteria-host.ipynb  2025-06-13.sprint-data-processing.ipynb  2025-06-18.sprint-network-features.ipynb  2025-06-19.mulvirisk2-validation.ipynb  dataset-features.ipynb
draft-01/: README.md  analysis.Q&A.ipynb  analysis.coocurrence-habitat.ipynb  analysis.coocurrence.ipynb  analysis.detection-statistics-virus.ipynb  analysis.detection-statistics.ipynb  analysis.diversity-correlations.ipynb  analysis.diversity.ipynb  analysis.host-range.ipynb  analysis.network-properties.ipynb  analysis.organism-range.ipynb  analysis.wide-taxonomic-profiling.ipynb  compute.cooccurrence-network-properties.R  compute.diversity-correlations.R  conf.yaml  prep.cooccurrence.ipynb  prep.metadata.ipynb  prep.motus.ipynb  prep.tableS1.ipynb  prep.tableS2.ipynb  prep.tableS3.ipynb  prep.tableS4.ipynb  prep.virus.ipynb  visualization.network-bacteria.ipynb  visualization.network-bacteria_virus.ipynb  visualization.network-virus.ipynb
miripvir/: data.py  ecology.py  filters.py  gtdb.py  ioutils.py  metrics.py  simulations.py
motus-g1-rdf/: bacteria.ipynb  convert.sh  data-model.yarrrml.yaml  host.ipynb  pipeline.yaml  sites_and_libraries.ipynb  test.ipynb  virus.ipynb
notebooks/: 2025-02-15.preparing-data.ipynb  2025-02-18-marco-mappings.ipynb  (+19 more)
test/: test_utils.py  (+1 more)
(+406 files in other folders)
