[project]
name = "miripvir25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "networkx>=3.5",
    "igraph>=1.0.0",
    "duckdb>=1.4.1",
    "pyyaml>=6.0.3",
    "jupyterlab>=4.4.10",
    "taxoniq>=1.0.3",
    "scikit-bio>=0.7.1.post1",
    "scipy>=1.16.3",
    "miripvir25",
    "powerlaw>=1.5",
    "streamlit>=1.51.0",
    "marimo>=0.17.6",
    "cairocffi>=1.7.1",
    "pycairo>=1.28.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "papermill>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
miripvir25 = { workspace = true }
