[metadata]
name = miripvir25
version = 0.0.1
author = Bruno Cuevas
author_email = brunocuevaszuviria@gmail.com
description = Meta-transcriptomic analysis of viral samples
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = miripvir, scripts
python_requires = >=3.9
install_requires =
    click
    numpy
    pandas
    matplotlib
    requests
    urllib3
    seaborn

include_package_data = True
[options.entry_points]
console_scripts =
    miripvir-tools = scripts.miripvir_tools:cli